package Smith.ACL;
message AgentKeepalive {
  required string name = 1;
  optional int64 pid = 2;
  optional int64 time = 3;
}
