message AgentCommand {
  required string command = 1;
  repeated string options = 2;
}
